# HindmarshRoseModel

./: CMakeLists(For example).txt  CMakeLists.txt  example.cpp  main.cpp
src/: HindmarshRoseModel.cpp  HindmarshRoseModel.h  HindmarshRoseParams.cpp  HindmarshRoseParams.h  HindmarshRoseStep.cpp  HindmarshRoseStep.h
